///////////////////////////////////////////////////////////////////////////////
// VERSION HISTORY:
///////////////////////////////////////////////////////////////////////////////

 - 00010001:
    - Course section 18: Game State & Title Screen
        - Added multiple .chr files, nametables and implemented emulation
          of a mapper to support CHR Bank Switching.
        - Implemented a state system with 4 game states:
          TITLESCREEN, PLAYING, GAMEOVER, PAUSED
        - The different states are separated into differnt .proc's
          to have different scopes
        - Implemented a title screen that uses a different .chr file than
          in the game and enabled bank switching to switch between the two
          banks.
        - Added menu options and a arrow indicator to the title screen
          to select between different play modes (different times of day)
        (Completed section)

 - 00010000:
    - Course section 17: Displaying Score Values
        - Added IncrementScore subroutine that converts hex -> decimal.
        - Added DrawScore subroutine that stores the score value in a buffer
          in memory (at $7000).
        - Added subroutine BackgroundCopy to read the buffer and update the
          nametable to update the status bar (score, etc.) at 
          the top of the screen.
        - Added jumps to the IncrementScore and DrawScore subroutines
          when the missile collides with an airplane.
        (Completed section)

 - 00001111:
    - Course section 16: Collision Detection
        - Added subroutines to check for collision between a point (on the 
          missile) and a bounding box (on the airplane)
        (Completed section)

 - 00001110:
     - Course section 15: Generating Random Numbers
        - Added subroutine for 16-bit Galois linear feedback shift register
          for generating random numbers.
        - Implemented the random number generator to spawn the airplanes